tests/ui/liveness/liveness-move-call-arg-2.rs
fn take(_x: Box<isize>) {}


fn main() {
    let _ = || {
        let x: Box<isize> = Box::new(25);

        loop {
            take(x); //~ ERROR use of moved value: `x`
        }
    };
}
